@@ -152,6 +152,11 @@ Xu          , Qxu         , Qxu         , Ql          , Ql          , Ql        
         text="Northerners unleashed!"
     [/label]
 
+	[item]
+		x,y=10,10
+		halo=scenery/fire1.png
+	[/item]
+
     [event]
         name=moveto
         first_time_only=no
